Rename package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tic-tac-toe-board",
+  "name": "mark-react-proj--roll-call",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
